# Nmap Changelog ($Id$); -*-text-*-

4.22SOC1

o The port selection mechanism was overhauled.  Nmap now knows
  (roughly) how common various services are, so you can specify
  options such as --top-ports 50 to scan the 50 most popular ports.
  You can also use the new --port-ratio option to scan ports above a
  given popularity level.  You can also now give the -p option service
  names (such as 'http') and wildcards (such as http* to include
  services such as https and http-mgmt).  There is also a bracket ([])
  operator for scanning all known ports within a given range.  All
  these changes, by Doug Hoyte, are described at
  http://seclists.org/nmap-dev/2007/q2/0224.html .

o Added more Nmap Scripting Engine scripts, bringing the total to 31.
  The new ones are bruteTelnet (Eddie Bell), SMTPcommands (Jason
  DePriest), iax2Detect (Jason), nbstat (Brandon Enright),
  SNMPsysdescr (Thomas Buchanan), HTTPAuth (Thomas), finger (Eddie),
  ircServerInfo (Doug Hoyte), and MSSQLm (Thomas Buchanan).

o Added the --reason option which explains WHY Nmap assigned a port
  status.  For example, a port could be listed as "filtered" because
  no response was received, or because an ICMP network unreachable
  message was received. [ Eddie ]

o Integrated all of your 2nd generation OS detection submissions,
  increasing the database size by 68% since 4.21ALPHA4 to 699
  fingerprints.  The 2nd generation database is now nearly half (42%)
  the size of the original.  Please keep those submissions coming so
  that we can do another integration round before the SoC program ends
  on August 20!  Thanks to David Fifield for doing most of the
  integration work!

o Integrated version detection submissions.  The database has grown by
  more than 350 signatures since 4.21ALPHA4.  Nmap now has 4,236
  signatures for 432 service protocols.  As usual, Doug Hoyte deserves
  credit for the integration marathon, which he describes at
  http://hcsw.org/blog.pl .
